--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
       }
 
       .axelspace_logo {
-        height: 1.5rem;
+        height: 0.8rem;
         vertical-align: middle;
       }
 
       .reverse {
         unicode-bidi: bidi-override;
         direction: rtl;
+      }
+
+      .has-text-grey-light a {
+        color: #999;
       }
     </style>
   </head>
@@ -42,7 +46,7 @@
               <span class="tag is-light">Geospatial Data</span>
               <span class="tag is-light">Machine Learning</span>
               <span class="tag is-light">Bayesian Statistics</span>
-              <span class="tag is-light">Statistical Analysis</span>
+              <span class="tag is-light">Computer Vision</span>
               <span class="tag is-light">Orbital Mechanics</span>
             </div>
           </div> <!--/ .content -->
