--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
           <h2 class="subtitle">Satellite Imagery Data Engineer</h2>
 
           <div class="content has-text-centered">
-            <p>I'm living and working in Japan, processing & analysing geo-spatio-temporal data at <a href="https://www.axelspace.com" target="_blank"><img src="./images/axelspace_logo.png" class="axelspace_logo"/></a></p>
+            <p>I'm living in Japan, processing & analysing spatial, spectral and temporal data at <a href="https://www.axelspace.com" target="_blank"><img src="./images/axelspace_logo.png" class="axelspace_logo"/></a></p>
             <div class="tags" style="display: block">
               <span class="tag is-light">Geospatial Data</span>
+              <span class="tag is-light">Radiometry</span>
               <span class="tag is-light">Machine Learning</span>
               <span class="tag is-light">Bayesian Statistics</span>
               <span class="tag is-light">Computer Vision</span>
@@ -55,7 +56,7 @@
 
       <footer class="footer">
         <div class="content is-small has-text-centered">
-          <h6>Please use PGP when contacting me.</h6>
+          <h6>Contact</h6>
           <p>
             <a class="button is-small is-dark is-outlined" href="mailto:user_domain" onclick="this.href=this.href.replace(/user/,'contact').replace(/_/,'&#64;').replace(/domain/,'lukaszkrawczyk&#46;eu')">
               <span class="icon is-small"><i class="fas fa-envelope"></i></span>
@@ -63,7 +64,7 @@
             </a>
           </p>
           <p>
-            Key: <a href="./pgp/0x9346C507336CDCE6.asc">0x9346C507336CDCE6.asc</a><br/>
+            PGP Key: <a href="./pgp/0x9346C507336CDCE6.asc">0x9346C507336CDCE6.asc</a><br/>
             Fingerprint: <code>3928 F198 BEB8 5FDC 76A6 BF96 9346 C507 336C DCE6</code>
           </p>
 
