--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Łukasz Krawczyk</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Personal website of Łukasz Krawczyk - Satellite Imagery Data Engineer">
+    <meta name="description" content="Łukasz Krawczyk - Satellite Mission Scientist, Satellite Image Processing Tech Lead">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
@@ -38,10 +38,10 @@
           <img src="./images/satellite.svg" class="satellite_icon"/>
 
           <h1 class="title">Łukasz Krawczyk</h1>
-          <h2 class="subtitle">Satellite Imagery Data Engineer</h2>
+          <h2 class="subtitle">Satellite Mission Scientist, Satellite Image Processing Tech Lead</h2>
 
           <div class="content has-text-centered">
-            <p>I'm living in Japan, processing & analysing spatial, spectral and temporal data at <a href="https://www.axelspace.com" target="_blank"><img src="./images/axelspace_logo.png" class="axelspace_logo"/></a></p>
+            <p>Tech Lead working in the Aerospace Industry solving complex engineering problems using machine learning & computer vision. Passionate about bold visions. 🔥</p>
             <div class="tags" style="display: block">
               <span class="tag is-light">Geospatial Data</span>
               <span class="tag is-light">Radiometry</span>
@@ -56,18 +56,6 @@
 
       <footer class="footer">
         <div class="content is-small has-text-centered">
-          <h6>Contact</h6>
-          <p>
-            <a class="button is-small is-dark is-outlined" href="mailto:user_domain" onclick="this.href=this.href.replace(/user/,'contact').replace(/_/,'&#64;').replace(/domain/,'lukaszkrawczyk&#46;eu')">
-              <span class="icon is-small"><i class="fas fa-envelope"></i></span>
-              <span class="reverse">ue.kyzcwarkzsakul@tcatnoc</span>
-            </a>
-          </p>
-          <p>
-            PGP Key: <a href="./pgp/0x9346C507336CDCE6.asc">0x9346C507336CDCE6.asc</a><br/>
-            Fingerprint: <code>3928 F198 BEB8 5FDC 76A6 BF96 9346 C507 336C DCE6</code>
-          </p>
-
           <p class="has-text-grey-light">
             Source code licensed <a href="https://opensource.org/licenses/mit-license.php">MIT</a>. Website content licensed <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a><br/>
             Icons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
